<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context=".Activity.LoginActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded"
        android:layout_marginTop="460dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded"
            android:hint="@string/kata_sandi"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textPassword"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_kata_sandi"
                android:layout_marginTop="5dp"
                android:layout_marginStart="256dp"
                />
            <ImageButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_masuk"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_gravity="center"
                android:contentDescription="@string/loggedin" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:text="@string/daftar"
        android:textColor="@color/purple_700"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        tools:ignore="SmallSp" />

    <!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:padding="20dp"-->
<!--        android:orientation="vertical">-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="15dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_email"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:hint="email"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_marginBottom="15dp"-->
<!--            android:layout_height="wrap_content">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="Password"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--        <Button-->
<!--            android:id="@+id/btn_login"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Login"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="20dp"-->
<!--            android:padding="10dp"/>-->

<!--    </LinearLayout>-->

</LinearLayout>