<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity"
    android:background="@drawable/bg_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


    <EditText
        android:id="@+id/et_emailreg"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="235dp"
        android:background="@drawable/rounded_et"
        android:hint="Email"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />
    <EditText
        android:id="@+id/et_passwordreg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_et"
        android:hint="Kata Sandi"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <EditText
        android:id="@+id/et_namalengkapreg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_et"
        android:hint="Nama Lengkap"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <EditText
        android:id="@+id/et_nikreg"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_et"
        android:hint="@string/nomor_induk_kependudukan"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <EditText
        android:id="@+id/et_tempattinggalreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:height="49dp"
        android:background="@drawable/rounded_et"
        android:hint="@string/tempat_tinggal"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />
    <EditText
        android:id="@+id/et_nomorhpreg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:inputType="phone"
        android:background="@drawable/rounded_et"
        android:hint="@string/nomor_handphone"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <ImageButton
        android:id="@+id/btn_upload"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/camera"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

    <ImageButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_daftar"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center"
        />

        </LinearLayout>
    </ScrollView>

</LinearLayout>